##################################################
 Revision history for Log::Log4perl
##################################################

1.44 (not yet released)
   *    (ms) Skipped mkpath umask tests on Win32 which doesn't support it
             properly.

1.43 (2014/03/16)
   *    (ms) Added %m{indent} to indent multi-line messages according to the
             PatternLayout (inspired by Wolfgang Pecho) 
   *    (ms) [rt.cpan.org #84818] Deven T. Corzine suggested adding
             a conditional use Win32 on Win32 platform to fix a 
             chicken-and-egg problem with the resurrector.
   *    (ms) Brian Wightman fixed Win32 log file cleanup in test suite
             https://github.com/mschilli/log4perl/pull/39. New FAQ
             entry on Win32 log file cleanup.

1.42 (2013/07/25)
   *    (ms) BenRifkah Bergsten-Buret added ';!' for property configurator
             comment delimiters:
             https://github.com/mschilli/log4perl/issues/25
   *    (ms) [rt.cpan.org 84723] Suppress error if close() in the file 
             appender in pipe mode returns "No child processes".
   *    (ms) Ronald J Kimball fixed a bug with the file appender's 
             create_at_logtime option in combination with 
             recreate_check_signal:
             https://github.com/mschilli/log4perl/pull/28
   *    (ms) Fixed additivity() modifications after init():
             https://github.com/mschilli/log4perl/issues/29
   *    (ms) [rt.cpan.org 87191] Applied patch by Zefram for better 
             maintainable line number checks (and coping with 5.19 buggy 
             line numbering, cough, cough).

1.41 (2013/04/21)
   *    (ms) [rt 81731] Added 'trace' level to Log4perl::Catalyst, as
             suggested by Ashley Pond.
   *    (ms) Alexander Hartmaier added Log::Log4perl::Filter::MDC to filter 
             based on MDC key/value
   *    (ms) [rt.cpan.org 83193] The file appender now ignores owner/group 