@@ -7,12 +7,13 @@ END { local($?); Log::Log4perl::Logger::cleanup(); }
 use 5.006;
 use strict;
 use warnings;
+no warnings qw( once );
 
-use Log::Log4perl::Util;
-use Log::Log4perl::Logger;
+require Log::Log4perl::Util;
+require Log::Log4perl::Logger;
 use Log::Log4perl::Level;
-use Log::Log4perl::Config;
-use Log::Log4perl::Appender;
+require Log::Log4perl::Config;
+require Log::Log4perl::Appender;
 
 our $VERSION = '1.43';
 
